bin/testsuite/tests/compiler/src/errors/compiler4109.swg
#global testerror "Err0616"
#test
{
    var x = 0
    var y = @mkslice(&x, 1)
}
